# lavka

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  openapi.yaml  requirements.txt
.devcontainer/: devcontainer.json
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
github/: dependabot.yml
postgresql/data/: init.sql  init2.sql
postgresql/schemas/: lavka.sql
schemas/: openapi.yaml
src/: common_handler.cpp  completed_orders_handler.cpp  completed_orders_handler.hpp  couriers_handler.cpp  couriers_handler.hpp  cpp_to_user_pg_map.hpp  get_courier_handler.cpp  get_courier_handler.hpp  get_order_handler.cpp  get_order_handler.hpp  greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_postgres.cpp  hello_postgres.hpp  main.cpp  orders_handler.cpp  orders_handler.hpp  repository_manager.cpp  repository_manager.hpp  user_type.cpp  user_type.hpp  user_type_test.cpp  utils.cpp  utils.hpp
src/api/: utils.cpp  utils.hpp
src/api/handlers/couriers/: couriers_handler.cpp  couriers_handler.hpp  get_courier_handler.cpp  get_courier_handler.hpp
src/api/handlers/orders/: get_order_handler.cpp  (+5 more)
src/db/: types.hpp
src/domain/entities/: courier.hpp  order.hpp
src/domain/repositories/: courier_repository.hpp  order_repository.hpp
src/domain/services/: courier_service.cpp  courier_service.hpp
src/handlers/: common_handler.cpp  common_handler.hpp
src/handlers/couriers/: couriers_handler.cpp  couriers_handler.hpp  get_courier_handler.cpp  get_courier_handler.hpp
src/handlers/orders/: completed_orders_handler.cpp  completed_orders_handler.hpp  get_order_handler.cpp  get_order_handler.hpp  orders_handler.cpp  orders_handler.hpp
src/infra/: repository_manager.cpp
src/infra/postgres/: courier.hpp  order.hpp  order_repository.cpp  utils.cpp  utils.hpp
src/infra/userver/: common_handler.cpp  common_handler.hpp  repository_manager.cpp  service_manager.cpp  service_manager.hpp
src/infrastructure/: repository_manager.cpp
src/infrastructure/postgres/: courier.hpp  courier_repository.cpp  order.hpp  order_repository.cpp
src/postgres/: courier.hpp  courier_repository.cpp  courier_repository.hpp  couriers_repository.cpp  couriers_repository.hpp  cpp_to_user_pg_map.hpp  order.hpp  order_repository.cpp  order_repository.hpp  types.hpp
tests/: conftest.py  test_basic.py  test_completed_ord_hand.py  test_couriers_handler.py  test_get_courier_handler.py  test_get_order_handler.py  test_orders_handler.py  test_rating_update.py
unittests/: couriers_service_test.cpp  mocked_courier_repo.hpp  mocked_order_repo.hpp
(+6 files in other folders)
